[package]
name = "o2lsh"
version = "0.1.0"
authors = ["Michael J. Curry <currymj@fastmail.fm>"]
license = "MPL-2.0+"
description = "A simple library for locality-sensitive hashing."
repository = "https://github.com/currymj/o2lsh"


[dependencies]
rand = "0.3"
revord = "0.0.2"
byteorder = "1.0"
rayon = "0.7"

[dependencies.ndarray]
version = "0.9.1"

[profile.release]
debug = true
